working subs and sub tags

--- a/client/reddit/rpage.jade
+++ b/client/reddit/rpage.jade
@@ -13,10 +13,10 @@ template(name='reddit_page')
                 div
                 +skve k='view_section' v='main' l='main' i='content'
                 // +skve k='view_section' v='comments' l='comments' i='comment'
-                +skve k='view_section' v='watson' l='watson' i='dna'
+                +skve k='view_section' v='watson' l='emotion' i='dna'
                 if tone
                     +skve k='view_section' v='tone' l='tone' i='smile grey'
-                +skve k='view_section' v='tags' l='tags' i='tags'
+                // +skve k='view_section' v='tags' l='tags' i='tags'
                 +skve k='view_section' v='related' l='related' i='fork'
                 +skve k='view_section' v='preview' l='preview' i='content'
                 // if skv_is 'view_section' 'main'
