--- a/client/reddit/subs.jade
+++ b/client/reddit/subs.jade
@@ -30,9 +30,9 @@ template(name='subs')
                 if can_skip_left
                     .ui.icon.button.skip_left
                         i.chevron.left.icon
-                if can_skip_right
-                    .ui.icon.button.skip_right
-                        i.chevron.right.icon 
+                // if can_skip_right
+                .ui.icon.button.skip_right
+                    i.chevron.right.icon 
                 .scrolling
                     unless subreddit_docs.count
                         .ui.center.aligned.basic.segment
