--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,9 +11,9 @@ template(name='nav')
                 i.large.stack.exchange.icon
             a.icon.zoomer.blue.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute 'reddit'}}" title='reddit')
                 if reddit_loading
-                    i.large.loading.yin.yang.icon
+                    i.large.loading.reddit.icon
                 else
-                    i.large.yin.yang.icon
+                    i.large.reddit.icon
             a.icon.zoomer.item.clear_tags.goto_subreddit(href='/subs' class="{{isActiveRoute regex='sub'}}" title='subreddit')
                 i.large.clone.icon
             a.icon.zoomer.item.goto_rusers(href='/rusers' class="{{isActivePath regex='rusers'}}" title='rusers')
