--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,5 +1,5 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.inverted.six.item.menu.topnav
+    .ui.fluid.attached.borderless.inverted.menu.topnav
         // a.icon.item.toggle_leftbar
         //     i.bars.icon
         if connected
@@ -27,5 +27,187 @@ template(name='nav')
             .spacer
             i.large.yin.yang.loading.big.icon
             +status    
+        .right.menu
+            // if currentUser
+            //     a.icon.item.add(title='add post') 
+            //         i.plus.large.icon
+            //     if unread_count
+            //         a.item.alerts.select_term(href="#" class=alert_toggle_class)
+            //             i.large.bell.icon
+            //             if unread_count
+            //                 |#{unread_count}
+            //     else
+            //         a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+            //             i.large.outline.bell.icon
+            //     a.icon.item(href="/chat" title='chat') 
+            //         i.chat.outline.large.icon
+            // // a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+            if is_dev 
+                .icon.item
+                    i.large.code.icon
+            if currentUser
+                // a.large.item.toggle_rightbar(class="{{isActiveRoute 'user_dashboard'}}")
+                a.mobile.hidden.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_credits'}}")
+                    |#{currentUser.points}p
+                a.large.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
+                    //- i.large.user.large.icon
+                    if currentUser.profile_image_id
+                        if is_admin
+                            i.large.shield.icon(title='admin mode on')
+                        else
+                            img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                    else 
+                        if is_admin
+                            i.large.shield.icon(title='admin mode on')
+                        else
+                            i.large.user.large.icon
+                    strong.mobile.hidden #{currentUser.name}
+            else
+                a.item(href="/register" title='register')
+                    // i.large.plus.icon
+                    |register
+                    // +icon name='plus'
+                a.item(href="/login" title='login')
+                    // i.large.chevron.right.icon
+                    |login
+                    // +icon name='login-rounded-right'
+            // a.icon.large.item.toggle_rightbar.select_term
+            //     i.ellipsis.vertical.large.icon
 
+template(name='topbar')
+    .ui.fluid.large.attached.segment
+        .ui.middle.aligned.divided.list
+            each recent_alerts
+                +recent_alert
+        a.ui.icon.attached.basic.button.item.close_topbar(href="/inbox")
+            i.inbox.large.icon
+            |inbox
+        
+template(name='recent_alert')        
+    .item.alert
+        .right.floated.content
+            i.circular.eye.link.large.icon.mark_read(title='mark read')
+        img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+        .content
+            .header
+                |#{description} 
+            .description #{author.name} #{made_when}
+            
+            
+            
+            
+template(name='right_sidebar')
+    .ui.right.sidebar.vertical.borderless.inverted.menu
+        // a.item.toggle_rightbar(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_layout'}}")
+        //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
+        //     |#{currentUser.name}
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
+            | dashboard (#{currentUser.points}p)
+            i.large.dashboard.icon
+        
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
+            | about
+            i.large.info.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/credits" class="{{isActiveRoute 'user_credits'}}")
+            | #{currentUser.total_credit_amount}p received
+            i.large.chevron.down.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/debits" class="{{isActiveRoute 'user_sent'}}")
+            | #{currentUser.total_debit_amount}p sent
+            i.large.chevron.up.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
+            | events
+            i.large.calendar.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
+            | requests
+            i.large.concierge.bell.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
+            | orders
+            i.large.cart.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
+            | offers
+            i.large.hand.holding.heart.icon
+        // a.item.toggle_rightbar(href="/user/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
+        //     | chat
+        //     i.chat.icon
+        .ui.divider
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/edit" title='edit your account')
+            i.cog.large.icon
+            |settings
+        // a.item.toggle_nightmode.toggle_rightbar(href="#")
+        //     i.lightbulb.large.icon
+        //     |dark mode
+        a.item.logout(href="/user/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
+            |logout
+            if is_logging_out
+                i.refresh.loading.icon
+            else
+                i.sign.out.icon
+
+
+
+template(name='left_sidebar')
+    .ui.left.sidebar.vertical.borderless.inverted.menu
+        // a.item.toggle_leftbar(href="/" class="{{isActiveRoute '/'}}")
+        //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
+        //     |One
+        a.item.toggle_leftbar(href="/" class="{{isActivePath '/'}}")
+            i.dashboard.icon
+            | Dashboard
+        a.item.toggle_leftbar(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
+            i.user.icon
+            | Profile
+        a.item.toggle_leftbar(href="/finance" class="{{isActivePath '/finance'}}")
+            i.money.icon
+            | Finance
+        a.item.toggle_leftbar(href="/settings" class="{{isActivePath '/settings'}}")
+            i.cog.icon
+            | Settings
+        .divider
+        a.disabled.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
+            |Chat
+            i.chat.icon
+        a.disabled.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
+            |Leads
+            i.telephone.icon
+        a.item.toggle_leftbar(href="/projects" class="{{isActivePath '/projects'}}" title='chat') 
+            |Projects
+            i.tasks.icon
+        a.disabled.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
+            |Invoices
+            i.invoice.icon
+        if is_eric
+            a.icon.item.toggle_dev.toggle_leftbar
+                |toggle dev
+                if is_dev
+                    i.code.blue.large.icon
+                else
+                    i.code.large.icon
+        if is_in_admin
+            a.icon.item.toggle_admin.toggle_leftbar
+                |toggle admin
+                if is_admin
+                    i.shield.blue.large.icon
+                else
+                    i.shield.large.icon
+            
+        if is_admin
+            // a.item.toggle_leftbar.set_badge(href="/badge" class="{{isActivePath 'badges'}}")
+            //     i.certificate.blue.icon
+            //     | badges
+            // a.item.toggle_leftbar.set_debit(href="/debit" class="{{isActivePath regex='rentals'}}")
+            //     i.gift.blue.icon
+            //     |gifts
+            .divider
+            // a.item.toggle_leftbar.set_project(href="/project" class="{{isActivePath regex='projects'}}")
+            //     i.tasks.blue.icon
+            //     | projects
+            // a.item.toggle_leftbar(href="/room" class="{{isActiveRoute 'requests'}}")
+            //     i.building.blue.icon
+            //     |rooms
+            a.blue.item.set_model.toggle_leftbar(href="/model" class="{{isActivePath '/model'}}")
+                |admin
+                i.database.blue.icon
+            a.item.set_user.toggle_leftbar(href="/user" class="{{isActiveRoute '/user'}}")
+                i.blue.users.icon
+                | all users
             
